MarcosSanchezSpring/src/main/java/com/example/marcossanchezspring/domain/errors/ErrorApp.java
package com.example.marcossanchezspring.domain.errors;

public sealed interface ErrorApp
        permits ErrorAppDatos,ErrorAppGrupos {}
